Fix horizontal overflow.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,6 @@
 .overlay {
     z-index: 1;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: absolute;
     pointer-events: none;
